# tpmstream

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  test_examples.sh
.github/workflows/: test.yml
scripts/: linters.sh
src/tpmstream/: __init__.py  __main__.py  get_cmds.py
test/: test_commandline.bats  test_constraints.py  test_events.py  test_int_emulation.py  test_pytss.py  test_readme.py
test/pcap/: esys-act-set-timeout.int.pcap  esys-auto-session-flags.int.pcap  esys-certify.int.pcap  esys-certifyX509.int.pcap  esys-change-eps.int.pcap  esys-clear.int.pcap  esys-clockset-audit.int.pcap  esys-clockset.int.pcap  esys-commit.int.pcap  esys-create-primary-hmac.int.pcap  esys-create-session-auth-bound.int.pcap  esys-create-session-auth-xor.int.pcap  esys-create-session-auth.int.pcap  esys-create-session-null-bind-no-tpm-key.int.pcap  esys-create-session-null-bind-tpm-key.int.pcap  esys-createloaded-session.int.pcap  esys-createloaded.int.pcap  esys-ecdh-keygen.int.pcap  esys-encrypt-decrypt.int.pcap  esys-field-upgrade.int.pcap  esys-firmware-read.int.pcap  esys-get-capability-act.int.pcap  esys-get-time.int.pcap  esys-hierarchy-control.int.pcap  esys-hmac.int.pcap  esys-hmacsequencestart.int.pcap  esys-make-credential-session.int.pcap  esys-make-credential.int.pcap  esys-nv-ram-counter-session-long-auth.int.pcap  esys-nv-ram-counter-session.int.pcap  esys-nv-ram-counter.int.pcap  esys-nv-ram-ordinary-index-rlock-session.int.pcap  esys-nv-ram-ordinary-index-wlock.int.pcap  esys-nv-ram-set-bits-session.int.pcap  (+29 more)
tpmstream/: __main__.py
(+126 files in other folders)
