[metadata]
name = tpmstream
author = joholl
version = attr: tpmstream.__version__
description = "A tool to help you understand TPM commands and responses. "
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Security :: Cryptography
#    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
zip_safe = false
python_requires = >= 3.9, < 3.12
setup_requires = setuptools
install_requires =
    colorama
    dpkt

[options.package_data]
# Create these files and add to package when the proper annotations have been added.
# tpmstream.common = py.typed
# tpmstream.io.binary = py.typed
# tpmstream.io.events = py.typed
# tpmstream.io.pcapng = py.typed
# tpmstream.io.pretty = py.typed
# tpmstream = py.typed
# tpmstream.spec.commands = py.typed
# tpmstream.spec.common = py.typed
# tpmstream.spec.structures = py.typed
# tpmstream.io.auto = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tpmstream = tpmstream.__main__:main

[options.extras_require]
dev =
    black

# [mypy]
# namespace_packages = True
# disallow_any_generics = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
